# 2222222221

./: app.py  config.py  db_migrate.py  models.py  pyproject.toml  requirements-deploy.txt  requirements.txt  vk_parser.db  wsgi.py
attached_assets/: Pasted--Telegram-1-VK-P-1743452306877.txt  bot.py
results/: result_10_20250331_212250.csv  result_15_20250331_215235.csv  result_1_20250331_210407.txt  result_40_20250401_003202.csv
static/css/: custom.css
static/js/: archive.js  main.js  upload.js
templates/: 404.html  500.html  archive.html  base.html  file_detail.html  index.html  result_detail.html  results.html  scheduled.html  settings.html  upload.html
uploads/: 20250401_125027_0104.html
utils/: file_processor.py  scheduler.py  vk_parser.py
